--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <aside class="sidebar">
                 <div class="bg-light">
                     <p class="h3 text-dark">What We Do</p>
-                    <p class="text-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nemo quos odit error repellat. Dolorem totam fuga dolore! Officiis minus ipsum quod harum. Enim natus sequi impedit harum reiciendis praesentium.</p>
+                    <p class="text-dark">We work to capture breathtaking mountain photography. There is no length we won't go to in order to capture the most stunning images. When it comes to mountains we stand apart from other photographers with our unique way of capturing nature's untouched beauty.</p>
                 </div>
             </aside>
         </div>
